add Person Class